# crypto-wallet-rust

./: .example.env  Cargo.toml  README.md
src/: lib.rs  main.rs
src/ui/: data.rs  main_menu.rs  mod.rs  wallet_actions.rs
src/wallet/: core.rs  eth.rs  evm.rs  hd.rs  mnemonic.rs  mod.rs  utils.rs  wallet_bitcoin.rs
tests/: core.rs  eth.rs  evm.rs  hd.rs
