[package]
name = "cryptowallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
dotenv = "0.15.0"
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std"] }
tokio = { version = "1", features = ["full"] }
web3 = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "1.4" }
rand_core = { version = "^0.6", features = ["std"] }
bip32 = "^0.5.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
hex = "0.4.3"
tiny-hderive = "0.3.0"
bip39 = "2.0.0"
tuirealm = "^1.9.0"
tui-realm-stdlib = "^1.3.0"
rust-crypto = "^0.2"
bs58 = "^0.4"
bitcoin = "0.30.1"
